--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100">
             <div class="teacher text-center">
-              <img src="#" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
+              <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
               <div class="py-2">
                 <h3 class="text-black">Dennis Nderitu</h3>
                 <p class="position">Software Engineer</p>
